--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@
             background-size: cover;
             color: black;
         }
+img {
+    max-width: 100%;
+    height: auto;
+    border: 2px solid #2980b9;
+    border-radius: 10px;
+    display: block;
+    margin: 20px auto;
+}
