--- a/style.css
+++ b/style.css
@@ -5,10 +5,7 @@
             color: black;
         }
 img {
-    max-width: 100%;
-    height: auto;
-    border: 2px solid #2980b9;
-    border-radius: 10px;
-    display: block;
-    margin: 20px auto;
+    width: 100%; 
+    height: auto; 
+    max-width: 500px; 
 }
