--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ section {
 }
 
 h2 {
-    color: #333;
-    border-bottom: 2px solid #4CAF50;
+    color: #FF1493;
+    border-bottom: 2px solid #FF1493;
     padding-bottom: 5px;
 }
 
